--- a/src/components/HeroesCard/HeroesCard.css
+++ b/src/components/HeroesCard/HeroesCard.css
@@ -8,9 +8,9 @@
     border-width:5px; 
     display: inline-grid;
   }
-  
-  .hero-btn {
-    font-weight: bold;
-    margin: 10px 3px;
-    padding: 5px;
-  }
+  .emoji-button {
+    border: none;
+    background: none;
+    padding: 0 0.25rem;
+    cursor: pointer;
+    }
