--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -4,6 +4,9 @@ nav {
     border: 2px solid black;
     padding: 10px;
     margin-bottom: 0.5rem;
+    text-align: center;
+    font-family: "Comic Sans MS";
+    color: red;
   }
   
   nav a {
