--- a/src/components/HeroesProfile/HeroesProfile.css
+++ b/src/components/HeroesProfile/HeroesProfile.css
@@ -4,19 +4,22 @@
     padding: 1rem;
     width: 15rem;
     height: 28rem;
-    display: inline-grid;
     margin: 1rem 2rem;
     box-shadow: 3px 4px #e04b52;
-    line-height: 1.3
-    }
+    line-height: 1.3;
+    position: fixed;
+    top: 25%;
+    left: 50%;
+    margin-top: -50px;
+    margin-left: -100px;
+    background: whitesmoke
+}
 
 .hero-avatar {
     justify-self: center;
     height: 17rem;
     width: auto;
-    }
-
-
+}
 
 .card h2 {
     font-family: "Comic Sans MS";
